package strategy.duck;

public interface FlyBehavior {

    void fly();
}
