package strategy.duck;

public interface QuackBehavior {

    void quack();
}
